--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             and am excited for a future in web design.</p>
                     </div>
 
-                    <div class="container">
+                    <div class="container" id="portfolio">
                         <img class="content-image" src="images/portfolio-1.png">
                         <h3>Marketing Page</h3>
                         <p>This project shows the front page of a marketing website meant for a specific
@@ -56,8 +56,8 @@
                     </div>
 
                     <div class="container">
-                        <h3>Map of Favorite Spots</h3>
                         <img class="content-image" src="images/portfolio-3.png">
+                        <h3>Map of Favorite Spots</h3>
                         <p>This project uses mapping apis to plot points for my favorite spots in the city
                             for a do-it-yourself walking tour.</p>
                     </div>
@@ -74,6 +74,19 @@
                         <h3>Calculator</h3>
                         <p>Someone can enter in the numbers they want, and press the big blue button and
                             get the result</p>
+                    </div>
+
+                    <div class="container skills" id="skills">
+                        <h2>Skills</h2>
+                        <p>this is a list of skills ive obtained related to developing websites and software</p>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Javascript</li>
+                                <li>Python</li>
+                                <li>Ruby</li>
+                                <li>Rails</li>
+                            </ul>
                     </div>
 
                     <div class="container contact" id="contact">
