--- a/index.html
+++ b/index.html
@@ -26,59 +26,67 @@
         <div class="wrapper">
             <main>
                 <section class="group">
-                    <div class="intro">
+                    <div class="container-1">
                         <img class="profile-pic" src="images/profile-pic.png">
+                    </div>
+
+                    <div class="intro">
                         <p>Hi! I'm a aspiring front end developer who appreciates organized and 
                             responsive designs of web pages using html and css, I am currently 
                             enrolled in a front end web development program at Treehouse
                             and am excited for a future in web design.</p>
                     </div>
+                </section>
 
-                    <div class="container" id="portfolio">
+                <section class="group" id="portfolio">
+                    <h2>Portfolio</h2>
+                    <div class="container-2" >
                         <img class="content-image" src="images/portfolio-1.png">
                         <h3>Marketing Page</h3>
                         <p>This project shows the front page of a marketing website meant for a specific
                             business i'm interested in.</p>    
                     </div>
 
-                    <div class="container"> 
+                    <div class="container-2"> 
                         <img class="content-image" src="images/portfolio-2.png">
                         <h3>Search Page</h3>
                         <p>This project searches through a specific database to find information that the
                             user is trying to look up.</p>
                     </div>
 
-                    <div class="container">
+                    <div class="container-2">
                         <img class="content-image" src="images/portfolio-3.png">
                         <h3>Travel App</h3>
                         <p>This project compares travel times based on different transportation methods
                             and tells you the best one.</p>
                     </div>
 
-                    <div class="container">
-                        <img class="content-image" src="images/portfolio-3.png">
+                    <div class="container-2">
+                        <img class="content-image" src="images/portfolio-4.png">
                         <h3>Map of Favorite Spots</h3>
                         <p>This project uses mapping apis to plot points for my favorite spots in the city
                             for a do-it-yourself walking tour.</p>
                     </div>
 
-                    <div class="container">
-                        <img class="content-image" src="images/portfolio-4.png">
+                    <div class="container-2">
+                        <img class="content-image" src="images/portfolio-5.png">
                         <h3>Photo Gallery</h3>
                         <p>This project shows pictures from a recent trip to the viewer and allows them to
                             easily navigate through the photos</p>
                     </div>
 
-                    <div class="container">
-                        <img class="content-image" src="images/portfolio-5.png">
+                    <div class="container-2">
+                        <img class="content-image" src="images/portfolio-6.png">
                         <h3>Calculator</h3>
                         <p>Someone can enter in the numbers they want, and press the big blue button and
                             get the result</p>
                     </div>
+                </section>
 
-                    <div class="container skills" id="skills">
+                <section class="group">
+                    <div class="skills" id="skills">
                         <h2>Skills</h2>
-                        <p>this is a list of skills ive obtained related to developing websites and software</p>
+                        <p>This is a list of skills ive obtained related to developing websites and software</p>
                             <ul>
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -89,23 +97,29 @@
                             </ul>
                     </div>
 
-                    <div class="container contact" id="contact">
+                    <div class="contact" id="contact">
                         <h2>Contact</h2>
                         <p>If you're interested in chatting or want more information about what ive been
                             working on, i'd love to hear from you!</p>
                                 <ul>
-                                    <li>Phone </li>
-                                    <li>Email </li>
+                                    <li>Phone <a href="tel:555-555-1212">555-555-5555</a></li>
+                                    <li>Email <a href = "mailto:m_macfarland@live.com ?subject= Web Design Inquiry &body= I would like somne info on your web design services"> m_macfarland@live.com
+                                        </a></li>
                                 </ul>
                     </div>
 
                 </section>
 
-                    <footer>
-                        <h4 class="foot-content">Mike Macfarland</h4>
-                        <nav class="foot-content" ></nav><a href="#top">Back To Top</a></nav>
+                    <footer class="group">
+                        <h4 >Mike Macfarland</h4>
+                        <nav>
+                            <ul>
+                                <li><a href="#top">home</a></li>
+                                <li><a href="#portfolio">Portfolio</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                            </ul>
+                        </nav>
                     </footer>
             </main>
         </div>
-
     </body>
