Update for peer review
updated some widths and small text edits added new font for contact section.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css"> 
         <link rel="stylesheet" href="css/styles.css">
+        <!-- main font -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+        <!-- font for contact links -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
     </head>
 
     <body id="top">
@@ -86,7 +90,7 @@
                 <section class="group">
                     <div class="skills" id="skills">
                         <h2>Skills</h2>
-                        <p>This is a list of skills ive obtained related to developing websites and software</p>
+                        <p>This is an example of a list of skills i'll obtain related to developing websites and software</p>
                             <ul>
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -101,13 +105,12 @@
                         <h2>Contact</h2>
                         <p>If you're interested in chatting or want more information about what ive been
                             working on, i'd love to hear from you!</p>
-                                <ul>
-                                    <li>Phone <a href="tel:555-555-1212">555-555-5555</a></li>
-                                    <li>Email <a href = "mailto:m_macfarland@live.com ?subject= Web Design Inquiry &body= I would like somne info on your web design services"> m_macfarland@live.com
-                                        </a></li>
-                                </ul>
+                            <ul>
+                                <li>Phone - <a href="tel:555-555-1212">555-555-5555</a></li>
+                                <li>Email - <a href = "mailto:m_macfarland@live.com ?subject= Web Design Inquiry &body= I would like somne info on your web design services"> m_macfarland@live.com
+                                    </a></li>
+                            </ul>
                     </div>
-
                 </section>
 
                     <footer class="group">
