--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <main>
                 <section class="group">
                     <div class="container-1">
-                        <img class="profile-pic" src="images/profile-pic.png">
+                        <img class="profile-pic" src="images/profile-pic.png" alt="profile picture">
                     </div>
 
                     <div class="intro">
@@ -45,42 +45,42 @@
                 <section class="group" id="portfolio">
                     <h2>Portfolio</h2>
                     <div class="container-2" >
-                        <img class="content-image" src="images/portfolio-1.png">
+                        <img class="content-image" src="images/portfolio-1.png" alt="image of marketing page">
                         <h3>Marketing Page</h3>
                         <p>This project shows the front page of a marketing website meant for a specific
                             business i'm interested in.</p>    
                     </div>
 
                     <div class="container-2"> 
-                        <img class="content-image" src="images/portfolio-2.png">
+                        <img class="content-image" src="images/portfolio-2.png" alt="image of search page">
                         <h3>Search Page</h3>
                         <p>This project searches through a specific database to find information that the
                             user is trying to look up.</p>
                     </div>
 
                     <div class="container-2">
-                        <img class="content-image" src="images/portfolio-3.png">
+                        <img class="content-image" src="images/portfolio-3.png" alt="image of travel app">
                         <h3>Travel App</h3>
                         <p>This project compares travel times based on different transportation methods
                             and tells you the best one.</p>
                     </div>
 
                     <div class="container-2">
-                        <img class="content-image" src="images/portfolio-4.png">
+                        <img class="content-image" src="images/portfolio-4.png" alt="image of mapped spots page">
                         <h3>Map of Favorite Spots</h3>
                         <p>This project uses mapping apis to plot points for my favorite spots in the city
                             for a do-it-yourself walking tour.</p>
                     </div>
 
                     <div class="container-2">
-                        <img class="content-image" src="images/portfolio-5.png">
+                        <img class="content-image" src="images/portfolio-5.png" alt="image of photo gallery">
                         <h3>Photo Gallery</h3>
                         <p>This project shows pictures from a recent trip to the viewer and allows them to
                             easily navigate through the photos</p>
                     </div>
 
                     <div class="container-2">
-                        <img class="content-image" src="images/portfolio-6.png">
+                        <img class="content-image" src="images/portfolio-6.png" alt="image of calculator page">
                         <h3>Calculator</h3>
                         <p>Someone can enter in the numbers they want, and press the big blue button and
                             get the result</p>
@@ -107,8 +107,7 @@
                             working on, i'd love to hear from you!</p>
                             <ul>
                                 <li>Phone - <a href="tel:555-555-1212">555-555-5555</a></li>
-                                <li>Email - <a href = "mailto:m_macfarland@live.com ?subject= Web Design Inquiry &body= I would like somne info on your web design services"> m_macfarland@live.com
-                                    </a></li>
+                                <li>Email - <a href="mailto:m_macfarland@live.com?subject=Web%20Design%20Inquiry&body=I%20would%20like%20some%20info%20on%20your%20web%20design%20services"> m_macfarland@live.com</a></li>
                             </ul>
                     </div>
                 </section>
