--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body id="top">
-        <header class="main-header">
+        <header class="main-header group">
             <h1 class="name">Mike Macfarland</h1>
 
             <nav class="main-nav">
@@ -117,8 +117,8 @@
                         <nav>
                             <ul>
                                 <li><a href="#top">home</a></li>
-                                <li><a href="#portfolio">Portfolio</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li class="hidden"><a href="#portfolio">Portfolio</a></li>
+                                <li class="hidden"><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
                     </footer>
